<resources>
    <string name="app_name">WhatsWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">%d °С</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="uvi">Uvi</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="dew_point">Dew point</string>
    <string name="clouds">Clouds</string>
    <string name="sunrise">Sinrise</string>
    <string name="sunset">Sunset</string>
    <string name="location_title">location_title</string>
    <string name="location_message">loaction_message</string>
    <string name="location_settings">location_setttings</string>
    <string name="preference_file_key">com.delight.whatsweather.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
