<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DetailFragment">

    <LinearLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/detail_pressure_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pressure"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_humidity_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_humidity"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
 <TextView
            android:id="@+id/detail_uvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uvi"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_uvi"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_uvi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_wind_speed_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wind_speed"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_wind_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_dew_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dew_point"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_dew_point_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dew_point"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_dew_point_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clouds"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_clouds_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clouds"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_clouds_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_sunrise_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sunrise"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_sunrise_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            />
        <ImageView
            android:id="@+id/detail_sunset_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sunset"
            android:layout_gravity="center"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/detail_sunset_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1007"
            android:textColor="@color/black"
            android:padding="4dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>