<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity"
    android:orientation="horizontal">
    <FrameLayout
        android:id="@+id/container_recycler"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daily_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recycler"/>
    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.WeatherFragment"
        android:background="@color/dark_gray">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/txt_size_small"
            style="@style/mainActivityTextStyle"
            android:layout_marginTop="@dimen/margin_date_txt"
            android:text="Пн.17 марта"/>
        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/txt_size_middle"
            android:layout_marginTop="@dimen/margin_city_txt"
            style="@style/mainActivityTextStyle"
            android:text="Бишкек"/>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/txt_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_moon"
            android:layout_marginTop="@dimen/margin_icon_top"
            />
        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/txt_size_small"
            android:text="min"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/txt_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_txt_temp"
            style="@style/mainActivityTextStyle"
            android:textSize="@dimen/txt_size_temp"
            android:text="@string/temp"/>
        <TextView
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_min_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/txt_size_small"
            android:text="max"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/txt_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_min_temp"
            app:layout_constraintStart_toStartOf="@id/txt_min_temp"
            android:layout_marginTop="@dimen/margin_txt_temp"
            style="@style/mainActivityTextStyle"
            android:textSize="@dimen/txt_size_temp"
            android:text="@string/temp"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_max_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_txt_description"
            style="@style/mainActivityTextStyle"
            android:textSize="@dimen/txt_size_description"
            android:text="Солнечно"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/detail_scrollview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:visibility="gone"
        tools:context=".ui.fragments.DetailFragment">

        <LinearLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/detail_pressure_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pressure"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_humidity_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_humidity"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_uvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uvi"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_uvi"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_uvi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_wind_speed_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wind_speed"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_dew_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dew_point"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_dew_point_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dew_point"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_dew_point_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_clouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_clouds_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clouds"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_clouds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_sunrise_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sunrise"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/detail_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                />
            <ImageView
                android:id="@+id/detail_sunset_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sunset"
                android:layout_gravity="center"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/detail_sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1007"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>